--- a/.github/workflows/sync-api-pr.yml
+++ b/.github/workflows/sync-api-pr.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install openapi-generator-cli
         run: npm install @openapitools/openapi-generator-cli -g
       - name: Create Branch
-        run: git checkout -b feature/sync-repo-${{github.run_id}}
+        run: git checkout -b 'feature/sync-repo-${{github.run_id}}'
       - name: Install Dependencies
         run: npm i
       - name: Get Api Spec
@@ -40,6 +40,6 @@ jobs:
       - name: git pusg
         run: git push origin feature/sync-repo
       - name: create pull request
-        run: gh pr create -B main -H feature/sync-repo-${{github.run_id}} --title 'Repo Sync' --body 'Created by Github action'
+        run: gh pr create -B main -H 'feature/sync-repo-${{github.run_id}}' --title 'Repo Sync' --body 'Created by Github action'
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
