--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "foresight-client-sdk",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean-build:all": "",
+    "clean": "rimraf dist coverage tsconfig.tsbuildinfo",
     "prebuild": "npm run build:types",
     "build": "node scripts/build.js",
     "build:tsc": "tsc",
-    "build:types": "tsc --emitDeclarationOnly --declaration"
+    "build:types": "tsc --emitDeclarationOnly --declaration",
+    "release-patch": "release-it ${RELEASE_SCALE} --ci --git.commit --git.push --git.tag --git.tagName='v${version}' --github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --npm.publish --npm.skipChecks"
   },
   "repository": {
     "type": "git",
@@ -22,8 +24,9 @@
   },
   "homepage": "https://github.com/bcaglayan/foresight-client-sdk#readme",
   "devDependencies": {
-    "typescript": "^4.9.4",
-    "esbuild": "^0.14.54"
+    "esbuild": "^0.14.54",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "axios": "^1.2.1"
