--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/bcaglayan/foresight-client-sdk#readme",
   "devDependencies": {
     "esbuild": "^0.14.54",
+    "release-it": "^15.6.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.9.4"
   },
