--- a/.github/workflows/sync-api-pr.yml
+++ b/.github/workflows/sync-api-pr.yml
@@ -13,14 +13,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Node 14.x 
-        uses: actions/setup-node@v3
-        with:
-          node-version: 14.x
+        with: 
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Configure Git User
         run: |
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
+      - name: Set up Node 14.x 
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14.x
       - name: Install openapi-generator-cli
         run:  npm install @openapitools/openapi-generator-cli -g
       - name: Create Branch
