--- a/.github/workflows/sync-api-pr.yml
+++ b/.github/workflows/sync-api-pr.yml
@@ -7,10 +7,13 @@ on:
         description: "Api Spec Url"
         required: true
         default: "https://api.service.runforesight.us/v2/api-docs"
-  
+
 jobs:
   tryer:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./node-sdk
     steps:
       - uses: actions/checkout@v3
         with: 
