--- a/.github/workflows/sync-api-pr-java.yml
+++ b/.github/workflows/sync-api-pr-java.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 11
+          distribution: 'corretto'
       - name: Install openapi-generator-cli
         run:  npm install @openapitools/openapi-generator-cli -g
       - name: Create Branch
