--- a/.github/workflows/sync-api-pr-java.yml
+++ b/.github/workflows/sync-api-pr-java.yml
@@ -31,15 +31,15 @@ jobs:
         run:  npm install @openapitools/openapi-generator-cli -g
       - name: Create Branch
         run:  git checkout -b 'feature/sync-repo-java'
-      #- name: Get Api Spec
-      #  run:  wget ${{ github.event.inputs.api_spec_url }} -O api-spec.json
-      #- name: Validate Api Spec
-      #  run: openapi-generator-cli validate -i ./api-spec.json
+      - name: Get Api Spec
+        run:  wget ${{ github.event.inputs.api_spec_url }} -O api-spec.json
+      - name: Validate Api Spec
+        run: openapi-generator-cli validate -i ./api-spec.json
       - name: Clear Old Files
         continue-on-error: true
         run:  rm -R ./src/main/java/com/runforesight/foresight/sdk
       - name: Generate Client
-        run:  openapi-generator-cli generate -i ./input/doc.json -g java -o ./generated --additional-properties=sourceFolder=src/main/java,library=resteasy,artifactId=foresight-java-client,groupId=com.runforesight,modelPackage=com.runforesight.foresight.sdk.client,apiPackage=com.runforesight.foresight.sdk.client
+        run:  openapi-generator-cli generate -i ./api-spec.json -g java -o ./generated --additional-properties=sourceFolder=src/main/java,library=resteasy,artifactId=foresight-java-client,groupId=com.runforesight,modelPackage=com.runforesight.foresight.sdk.client,apiPackage=com.runforesight.foresight.sdk.client
       - name: Copy Client
         run: cp -r ./generated/src/main/java/com/runforesight/foresight/* ./src/main/java/com/runforesight/foresight
       - name: git status
