--- a/.github/workflows/sync-api-pr.yml
+++ b/.github/workflows/sync-api-pr.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install openapi-generator-cli
         run:  npm install @openapitools/openapi-generator-cli -g
       - name: Create Branch
-        run:  git checkout -b 'feature/sync-repo'
+        run:  git checkout -b 'feature/sync-repo-${{github.run_id}}'
       - name: Get Api Spec
         run:  wget ${{ github.event.inputs.api_spec_url }} -O api-spec.json
       - name: Validate Api Spec
@@ -45,8 +45,8 @@ jobs:
       - name: git commit
         run:  git commit -m "Repo Sync"
       - name: git pusg
-        run:  git push origin feature/sync-repo
+        run:  git push origin feature/sync-repo-${{github.run_id}}
       - name: create pull request
-        run:  gh pr create -B master -H 'feature/sync-repo' --title 'Repo Sync' --body 'Created by Github action'
+        run:  gh pr create -B master -H 'feature/sync-repo-${{github.run_id}}' --title 'Repo Sync' --body 'Created by Github action'
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
